# lua_project_template

./: .gitmodules  CMakeLists.txt  README.md
binding_generator/: CMakeLists.txt
binding_generator/src/: main.cpp
cmake/: lua.cmake
sen_lua/: CMakeLists.txt
sen_lua/src/: main.cpp
src/: dummy_class.h  main.cpp
src/scripts/: script.lua
